# stm32_ci

./: .gdbinit  .gitignore  .gitmodules  .scuba.yml  CMakeLists.txt  Dockerfile  LICENSE  README.md  blinky.c  execute_build.sh  export_cherry_pick.sh  launch_cmake.sh  stm32f1.gdb  update_submodule.sh
boards/: CMakeLists.txt
boards/bluepill/: project_board.h
boards/nucleof103/: project_board.h
hmt_hal/: CMakeLists.txt
hmt_hal/common/: CMakeLists.txt  hmt_common.c  hmt_common.h  hmt_simple_timer.c  hmt_simple_timer.h  hmt_usart_common.c  stm32f1xx_it.c  stm32f4xx_it.c
hmt_hal/gpio/: CMakeLists.txt  gpio_defs.c  gpio_defs.h  gpio_manager.c  gpio_manager.h  subs.sh
hmt_hal/gpio/f1/: CMakeLists.txt  gpio_manager.c
hmt_hal/gpio/f4/: CMakeLists.txt  gpio_manager.c  gpio_manager.h
hmt_hal/rcc/: CMakeLists.txt  rcc_common.c  rcc_common.h  rcc_manager.c  rcc_manager.h
hmt_hal/rcc/f1/: rcc_manager.c  rcc_manager.h
hmt_hal/rcc/f4/: CMakeLists.txt  rcc_manager.c
hmt_hal/spi/: spi_common.c  spi_common.h
hmt_hal/spi/f1/: CMakeLists.txt  spi_manager.c
hmt_hal/spi/f4/: CMakeLists.txt  spi_manager.c  spi_manager.h
hmt_hal/usart/: CMakeLists.txt  usart_common.c  usart_common.h  usart_manager.c  usart_manager.h
hmt_hal/usart/f1/: CMakeLists.txt  usart_manager.c  usart_manager.h
hmt_hal/usart/f4/: CMakeLists.txt  usart_manager.c  usart_manager.h
inc/: adc_test.h  flash_test.h  i2c_test.h  interrupt_gpio_test.h  main.h  project_board.h  spi_test.h  stm32f1xx_it.h  stm32f4xx_it.h  timer_test.h  usart_test.h
lib/gpio/: CMakeLists.txt  gpio_manager.c  toggle.c  toggle.h
src/: adc_test.c  flash_test.c  i2c_test.c  interrupt_gpio_test.c  main.c  spi_test.c  stm32f1xx_it.c  stm32f4xx_it.c  timer_test.c  usart_test.c
template/: build_conf_template.conf  c_cpp_properties_template.json  template.conf
